Release Notes for the event package
-----------------------------------

R4.3.9  2018-10-16    K. Kim
        * build against BsaCore R1.5.0

R4.3.8  2018-08-17    K. Kim for Till Straumann
        * bsaRecord.c, bsaRecord.dbd: send monitors on NORD change
        * SINK_SIZE=10 as a default
        * define epicsTimeERROR macro in evrTime.h locally due to the macro is removed in epics 7

R4.3.7  2018-06-28    K. Kim for Till Struamann

        * devBsaCore: defer activation of BSA sink until
          iocInit is in the initHookAfterIocRunning state.

          The sink does process the BSA record which is
          not 'legal' until the IOC is fully initialized.
          This fix mitigates a scenario where triggers
          are enabled prematurely (it is recommended to
          enable triggers only after IOC initialization).
         * build against BsaCore R1.4.1
        

R4.3.6  2018-05-16   K. Kim
        * build against BsaCore  R1.4.0

R4.3.5  2018-04-24   T. Straumann
    *use BsaCore R1.3.3
R4.3.4  2018-04-20   C. Bianchini
	*bug fix: evrSupport/src/bsa.c to divide by n-1 instead of n.

R4.3.3  2018-04-18   K. Kim
        * merge with new_bsa_core branch
        * Add new macro for NELM in BSA record.
          The new macro defines size of sink,
          if it is undefined in substitutions file it gives "1" 
          and the BSA record will as exactly previous LCLS1 BSA.
          if it is defined with some value (50 or 100), 
          the BSA record push multiple samples to compress record. 
          It will reduce processing rate of compress record and will bring better performance.
        * Add document for BsaCore integration

R4.3.2-BR-new_bsa_core: 2018-04-17 C.Bianchini
        *Changed NELM from 50 to 1.
         file changed: evrSupport/Db/bsa/bsaEdefAvg.db

R4.2.9: 2017-06-06  H. Slepicka
    Bumped MiscUtils version to R2.2.5

R4.2.8: 2017-02-20  H. Slepicka