@@ -3,6 +3,7 @@ Release Notes for the event package
 
 R4.3.9  2018-10-16    K. Kim
         * build against BsaCore R1.5.0
+        * add extern "C" for drvMrfEr.h
 
 R4.3.8  2018-08-17    K. Kim for Till Straumann
         * bsaRecord.c, bsaRecord.dbd: send monitors on NORD change
